# cpp-lzw

./: .gitignore  CMakeLists.txt  test1.decoded  test1.encoded  test2.decoded  test2.encoded
include/lzw/: alphabet.hpp  decode.hpp  encode.hpp  types.hpp
include/lzw/dict/: dict.hpp  trie.hpp
src/: main.cpp
src/lzw/: decode.cpp  encode.cpp
test/: test.cpp
